# FrankE

./: CMakeLists.txt  LICENSE  README.md  ReadMe.txt.txt  dbData.s3db
Editor/VEX/XTools/fbxtoogre/: CMakeLists.txt
src/: CMakeLists.txt
src/DAL/: Controllers_generated.h  Netmsg_generated.h
src/LuaScript/: LuaFile.cpp  LuaFile.h  LuaFunction.cpp  LuaFunction.h  LuaScript.cpp  LuaScript.h  LuaScriptInstance.cpp  LuaScriptInstance.h  ToluaUtils.cpp  ToluaUtils.h
src/LuaScript/pkgs/: AudioLuaAPI.pkg  CoreLuaAPI.pkg  EngineLuaAPI.pkg  GraphicsLuaAPI.pkg  IOLuaAPI.pkg  InputLuaAPI.pkg  LuaScriptLuaAPI.pkg  MathLuaAPI.pkg  NavigationLuaAPI.pkg  NetworkLuaAPI.pkg  PhysicsLuaAPI.pkg  ResourceLuaAPI.pkg  SceneLuaAPI.pkg  UILuaAPI.pkg  Urho2DLuaAPI.pkg
src/LuaScript/pkgs/Audio/: Audio.pkg  Sound.pkg  SoundListener.pkg  SoundSource.pkg  SoundSource3D.pkg
src/LuaScript/pkgs/Core/: Context.pkg  Object.pkg  ProcessUtils.pkg  StringUtils.pkg  Timer.pkg  Variant.pkg
src/LuaScript/pkgs/Engine/: Console.pkg  DebugHud.pkg  Engine.pkg
src/LuaScript/pkgs/Graphics/: AnimatedModel.pkg  Animation.pkg  AnimationController.pkg  AnimationState.pkg  BillboardSet.pkg  Camera.pkg  DebugRenderer.pkg  DecalSet.pkg  (+24 more)
src/Ogre/CMake/: FeatureSummary.cmake
src/Ogre/OgreMain/: CMakeLists.txt
src/Ogre/PlugIns/: CMakeLists.txt
src/TestCSharp/: XETUICSharp.sln
src/TestCSharp/FrankeCSharp/: EngineBase.cs  Entity.cs  FrankeCSharp.csproj  ISystem.cs  ObjectBase.cs  PrefabMsg.cs  Quaternion.cs  SceneBase.cs  State.cs  UnityContainer.cs  Vector2.cs  Vector3.cs
src/TestCSharp/XETUICSharp/: Program.cs  XETUICSharp.csproj
src/TestXE/: CMakeLists.txt
src/TestXE/XETCommon/: Controllers_generated.h  EditorControllerSystem.cpp  EditorControllerSystem.hpp  Netmsg_generated.h  TestController.cpp  TestController.hpp  TestControllerSystem.cpp  TestControllerSystem.hpp  TestDAL.cpp  TestDAL.hpp  TestPostProcess.cpp  TestPostProcess.hpp  TestScene.cpp  TestScene.hpp
src/TestXE/XETController/: CMakeLists.txt  ControllerState.cpp  ControllerState.hpp  TestScene.h  main.cpp
src/TestXE/XETEditor/: CMakeLists.txt  EditorState.cpp  EditorState.hpp  main.cpp
src/TestXE/XETInput/: CMakeLists.txt  WindowState.cpp  WindowState.hpp  main.cpp
src/TestXE/XETServer/: CMakeLists.txt  ServerState.cpp  ServerState.hpp  main.cpp
src/TestXE/XETUI/: CMakeLists.txt  DemoPanelColors.h  GUI - Kopie.h  GUI.h  TestMenuState.cpp  TestMenuState.hpp  UIState_1.cpp  UIState_1.h  UIState_2.cpp  UIState_2.h  main - Kopie.cpp  main.cpp
src/Tests/TestDispatcher/: TestDispatcher.sln  TestDispatcher.vcxproj  TestDispatcher.vcxproj.filters  main.cpp
src/Tools/: CMakeLists.txt
src/include/: Settings.hpp  XEAI.hpp  XEAnimation.hpp  XEAudio.hpp  XEController.hpp  XEDAL.h  XEDebugger.hpp  XEEffect.hpp  XEInput.hpp  XENetwork.hpp  XEPhysics.hpp  XERenderSystem.hpp  XERenderer.hpp  XEScene.hpp  XEScripts.hpp  XEState.h  XESystem.hpp  XEUI.hpp  XEngine.hpp
src/include/XEAudio/: SoundHandle.hpp  SoundListener.hpp  SoundManager.hpp
src/include/XEAudio_SFML/: XESoundFactory.hpp  XESoundListener.hpp
src/include/XEDAL/: DB.hpp  IDAL.hpp  IDALObject.hpp
src/include/XEEditor/: Editor.hpp  EditorCommands.hpp  IEditor.hpp  SelectionRectangle.h  TFViewport.h
src/include/XEInput/: InputConfigFile.hpp
src/include/XENetwork/: DataTypes.hpp  Message.hpp  Message.inl  NetObserver.hpp  NetworkManager.hpp
src/include/XEPhysics/: BulletMesh.hpp  Export.hpp  HeightfieldTerrainShape.h
src/include/XERenderer/: Animation.h  AnimationRenderable.hpp  CameraRenderable.hpp  DebugDrawer.hpp  DrawDynamicLines.hpp  GraphicsManager.hpp  LightRenderable.hpp  OgreCharEntity.hpp  OgreSceneManager.hpp  OgreWorkspace.hpp  Renderable.hpp  StaticRenderable.hpp
src/include/XEScene/: XESpawnerObject.hpp
src/include/XEScripts/: LUAEngine.h  luna.h
src/include/XESystem/: FrameLimiter.hpp  Logging_test.hpp  QueueManager.hpp  SystemConfig.hpp  TransportData.hpp
src/include/XEUI/: Adjustment.hpp  Alignment.hpp  Bin.hpp  Box.hpp  Container.hpp  Desktop.hpp  ElementStyle.hpp  Export.hpp  FastDelegate.hpp  Font.hpp  FunctorBase.hpp  Glyph.hpp  HealthBar.hpp  MemberFunction.hpp  Misc.hpp  NonCopyable.hpp  Object.hpp  Panel2D.hpp  Panel3D.hpp  PanelColors.h  SharedPtr.hpp  SharedPtr.inl  Signal.hpp  Signal.inl  UIManager.hpp  UIPanel.hpp  UIPrerequisites.hpp  UIScreen.hpp  UIState.hpp  UIStateManager.hpp  Widget - Kopie.hpp  Widget.hpp
src/include/XEngine/: EntityHolder.hpp  Node.hpp  OgreLogListener.hpp  ResourceManager.hpp  Scene.hpp  Settings.hpp  XENetObserver.hpp
src/src/: CMakeLists.txt  MainLoop.cpp  XEngine.cpp
src/src/XEAudio/: SoundHandle.cpp  SoundListener.cpp  SoundManager.cpp
src/src/XEAudio_SFML/: CMakeLists.txt  XEResourceStream.cpp  XESoundListener.cpp
src/src/XEDAL/: CMakeLists.txt  DB.cpp  IDAL - Kopie.cpp  IDAL.cpp  IDALObject.cpp
src/src/XEEditor/: CMakeLists.txt  Editor.cpp  EditorCommands.cpp  IEditor.cpp
src/src/XEEffect/: CMakeLists.txt
src/src/XEInput/: CMakeLists.txt  InputConfigFile.cpp
src/src/XENetwork/: CMakeLists.txt  Message.cpp  NetObserver.cpp  NetworkManager.cpp
src/src/XEPhysics/: BulletMesh.cpp  CMakeLists.txt  HeightfieldTerrainShape.cpp
src/src/XERenderer/: Animation.cpp  AnimationRenderable.cpp  CMakeLists.txt  CameraRenderable.cpp  DebugDrawer.cpp  DrawDynamicLines.cpp  GraphicsManager.cpp  Item.cpp  LightRenderable.cpp  OgreCharEntity.cpp  OgreSceneManager.cpp  OgreWorkspace.cpp  Renderable.cpp  StaticRenderable.cpp  glTFAsset.cpp  gltfAsset.h
src/src/XEScripts/: LuaEngine.cpp
src/src/XESystem/: CMakeLists.txt  FrameLimiter.cpp  QueueManager.cpp  atomicops.h  readerwriterqueue.h
src/src/XEUI/: Adjustment.cpp  Alignment.cpp  Bin.cpp  Box.cpp  CMakeLists.txt  Container.cpp  Desktop.cpp  ElementStyle.cpp  HealthBar.cpp  Misc.cpp  NonCopyable.cpp  Object.cpp  Panel2D.cpp  Panel3D.cpp  Signal.cpp  UIManager.cpp  UIPanel.cpp  UISerializer.cpp  UIStateManager.cpp  Widget - Kopie.cpp  Widget.cpp
src/src/XEngine/: OgreLogListener.cpp  ResourceManager.cpp  Scene.cpp  Settings.cpp  XENetObserver.cpp
(+1183 files in other folders)
